Lagt 3 online spel i startsidan  och fixat lite i rules.html

--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@
     </div>
   </header>
 
-  <main>
+  <main class="start-page">
     <article>
       <section class="container">
         <div class="row">
@@ -63,59 +63,120 @@
             <div class="fyrairadimg mt-5">
               <img class="w-75 img-fluid" src="/img/fyrairad.png">
             </div>
-
           </div>
         </div>
-        <div class="row">
+
+        <!-- 3 online games  start -->
+
+
+
+
+
+
+
+
+        
+        <div class="row mt-5">
+          <div class="col-12 col-md-4 mb-5">
+            <div class="card">
+              <a href="http://www.spelo.se/action/plants-vs-zombies">
+                <div class="btn bg-info text-white font-weight-bold online">
+                  SPELA
+                </div>
+                <img class="card-img-top" src="/img/plants-game.jpg" alt="The game plants vs zombies">
+              </a>
+              <div class="card-body">
+                <h4 class="card-title text-primary">Plants vs Zombies</h4>
+                <p class="card-text">Kydda ett hus från attackerande zombier genom att plantera flera olika plantor. </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-4 mb-5">
+            <div class="card">
+              <a href="http://www.spelo.se/action/guns-n-glory-heroes">
+                <div class="btn bg-info text-white font-weight-bold online">
+                  SPELA
+                </div>
+                <img class="card-img-top" src="/img/bomberpungu.jpg" alt="The game bomberpengu">
+              </a>
+              <div class="card-body">
+                <h4 class="card-title text-primary">Bomberpungu</h4>
+                <p class="card-text">Kydda ett hus från attackerande zombier genom att plantera flera olika plantor. </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-4 mb-5">
+            <div class="card">
+              <a href="http://www.spelo.se/action/plants-vs-zombies">
+                <div class="btn bg-info text-white font-weight-bold online">
+                  SPELA
+                </div>
+                <img class="card-img-top" src="/img/gunsngloryheroes.jpg" alt="The game Guns N Glory Heroes">
+              </a>
+              <div class="card-body">
+                <h4 class="card-title text-primary">Guns n Glory Heros</h4>
+                <p class="card-text">Kydda ett hus från attackerande zombier genom att plantera flera olika plantor. </p>
+              </div>
+            </div>
+          </div>
+          <!-- 3 online games end -->
+        </div>
+
+
+        <!-- 
           <div class="buttonsnav col-12 mt-2 bg-secondary">
             <h1>Andra spel online!</h1>
             <button type="button" href="#" class="btn btn-secondary btn-lg">Spel 1</button>
             <button type="button" href="#" class="btn btn-secondary btn-lg">Spel 2</button>
             <button type="button" href="#" class="btn btn-secondary btn-lg">Spel 3</button>
-          </div>
+            </div>
+ -->
+
+
+      </section>
+    </article>
+  </main>
+  <footer>
+    <div class="container-fluid bg-secondary">
+      <div class="row col-12">
+
+        <div class="col-12 col-md-4 mt-2">
+          <p>Adress:</p>
+          <p>Kungsgatan 88</p>
+          <p>Malmö, Sweden</p>
         </div>
 
-        </section>
-      </article>
-    </main>
-    <footer>
-      <div class="container-fluid bg-secondary">
-        <div class="row col-12">
-
-          <div class="col-12 col-md-4 mt-2">
-            <p>Adress:</p>
-            <p>Kungsgatan 88</p>
-            <p>Malmö, Sweden</p>
-          </div>
-
-          <div class="col-12 col-md-4 mt-2">
-            <p>http://www.fourinalinegame.se</p>
-            <p>email: info@fourinalinegame.se</p>
-            <p>email: anja@fourinalinegame.se</p>
-          </div>
-
-          <div class="col-12 col-md-4 mt-2">
-            <p>Kontakt:  Anna Karlsson</p>
-            <p>Telefon:  +46(0)123456789</p>
-            <p>Mobil:    +46(0)123456789</p>
-          </div>
-
+        <div class="col-12 col-md-4 mt-2">
+          <p>http://www.fourinalinegame.se</p>
+          <p>email: info@fourinalinegame.se</p>
+          <p>email: anja@fourinalinegame.se</p>
         </div>
+
+        <div class="col-12 col-md-4 mt-2">
+          <p>Kontakt: Anna Karlsson</p>
+          <p>Telefon: +46(0)123456789</p>
+          <p>Mobil: +46(0)123456789</p>
+        </div>
+
       </div>
-    </footer>
+    </div>
+  </footer>
 
 
-    <!-- JavaScript libraries -->
-    <script src="/jsonflex.js"></script>
-    <script src="/js/libs/jquery-3.2.1.js"></script>
-    <script src="/js/libs/popper-1.11.0.js"></script>
-    <script src="/js/libs/bootstrap-4-beta.js"></script>
-    <!-- Application specific JavaScript -->
-    <!-- Application specific JavaScript -->
-    <script src="/js/classes/base.class.js"></script>
-    <script src="/js/classes/player.class.js"></script>
-    <script src="/js/classes/game.class.js"></script>
-    <script src="/js/classes/hiscore.class.js"></script>
-    <script src="/js/main.js"></script>
-  </body>
+  <!-- JavaScript libraries -->
+  <script src="/jsonflex.js"></script>
+  <script src="/js/libs/jquery-3.2.1.js"></script>
+  <script src="/js/libs/popper-1.11.0.js"></script>
+  <script src="/js/libs/bootstrap-4-beta.js"></script>
+  <!-- Application specific JavaScript -->
+  <!-- Application specific JavaScript -->
+  <script src="/js/classes/base.class.js"></script>
+  <script src="/js/classes/player.class.js"></script>
+  <script src="/js/classes/game.class.js"></script>
+  <script src="/js/classes/hiscore.class.js"></script>
+  <script src="/js/main.js"></script>
+</body>
+
 </html>
