--- a/www/rules.html
+++ b/www/rules.html
@@ -86,7 +86,7 @@
 
 
 		<div class="row">
-			<div class="col-12 col-md-4">
+			<div class="col-12 col-md-4 mb-5">
 				<div class="card">
 					<img class="card-img-top" src="/img/rules/rules-6.png" alt="Card image cap">
 					<div class="card-body">
@@ -101,7 +101,7 @@
 				</div>
 			</div>
 
-			<div class="col-12 col-md-4">
+			<div class="col-12 col-md-4 mb-5">
 				<div class="card">
 					<img class="card-img-top" src="/img/rules/rules-2.png" alt="Card image cap">
 					<div class="card-body">
@@ -115,7 +115,7 @@
 				</div>
 			</div>
 
-			<div class="col-12 col-md-4">
+			<div class="col-12 col-md-4 mb-5">
 				<div class="card">
 					<img class="card-img-top" src="/img/rules/rules-7.png" alt="Card image cap">
 					<div class="card-body">
