Ändrat 3 bilderna  (online spel)

--- a/www/index.html
+++ b/www/index.html
@@ -67,26 +67,17 @@
         </div>
 
         <!-- 3 online games  start -->
-
-
-
-
-
-
-
-
-        
         <div class="row mt-5">
           <div class="col-12 col-md-4 mb-5">
             <div class="card">
               <a href="http://www.spelo.se/action/plants-vs-zombies">
-                <div class="btn bg-info text-white font-weight-bold online">
+                <div class="btn bg-danger text-white font-weight-bold online">
                   SPELA
                 </div>
-                <img class="card-img-top" src="/img/plants-game.jpg" alt="The game plants vs zombies">
+                <img class="card-img-top" src="/img/plants-3.jpg" alt="The game plants vs zombies">
               </a>
               <div class="card-body">
-                <h4 class="card-title text-primary">Plants vs Zombies</h4>
+                <h4 class="card-title text-info">Plants vs Zombies</h4>
                 <p class="card-text">Kydda ett hus från attackerande zombier genom att plantera flera olika plantor. </p>
               </div>
             </div>
@@ -95,13 +86,13 @@
           <div class="col-12 col-md-4 mb-5">
             <div class="card">
               <a href="http://www.spelo.se/action/guns-n-glory-heroes">
-                <div class="btn bg-info text-white font-weight-bold online">
+                <div class="btn bg-danger text-white font-weight-bold online">
                   SPELA
                 </div>
-                <img class="card-img-top" src="/img/bomberpungu.jpg" alt="The game bomberpengu">
+                <img class="card-img-top" src="/img/pengu-3.jpg" alt="The game bomberpengu">
               </a>
               <div class="card-body">
-                <h4 class="card-title text-primary">Bomberpungu</h4>
+                <h4 class="card-title text-info">Bomberpungu</h4>
                 <p class="card-text">Kydda ett hus från attackerande zombier genom att plantera flera olika plantor. </p>
               </div>
             </div>
@@ -110,30 +101,27 @@
           <div class="col-12 col-md-4 mb-5">
             <div class="card">
               <a href="http://www.spelo.se/action/plants-vs-zombies">
-                <div class="btn bg-info text-white font-weight-bold online">
+                <div class="btn bg-danger text-white font-weight-bold online">
                   SPELA
                 </div>
-                <img class="card-img-top" src="/img/gunsngloryheroes.jpg" alt="The game Guns N Glory Heroes">
+                <img class="card-img-top" src="/img/heroes.jpg" alt="The game Guns N Glory Heroes">
               </a>
               <div class="card-body">
-                <h4 class="card-title text-primary">Guns n Glory Heros</h4>
+                <h4 class="card-title text-info">Guns n Glory Heroes</h4>
                 <p class="card-text">Kydda ett hus från attackerande zombier genom att plantera flera olika plantor. </p>
               </div>
             </div>
           </div>
-          <!-- 3 online games end -->
         </div>
-
 
         <!-- 
           <div class="buttonsnav col-12 mt-2 bg-secondary">
-            <h1>Andra spel online!</h1>
+            
             <button type="button" href="#" class="btn btn-secondary btn-lg">Spel 1</button>
             <button type="button" href="#" class="btn btn-secondary btn-lg">Spel 2</button>
             <button type="button" href="#" class="btn btn-secondary btn-lg">Spel 3</button>
             </div>
  -->
-
 
       </section>
     </article>
