--- a/www/rules.html
+++ b/www/rules.html
@@ -88,7 +88,7 @@
 		<div class="row">
 			<div class="col-12 col-md-4 mb-5">
 				<div class="card">
-					<img class="card-img-top" src="/img/rules/rules-6.png" alt="Card image cap">
+					<img class="card-img-top" src="/img/rules/rules-3.jpg" alt="Card image cap">
 					<div class="card-body">
 						<h4 class="card-title font-weight-bold text-center mb-4">Välj motståndare</h4>
 						<ul>
@@ -97,7 +97,7 @@
 							<li class="card-text mt-3">Spelarna turas om att placera 1 marker per drag.</li>
 						</ul>
 					</div>
-					<!-- </div> -->
+				
 				</div>
 			</div>
 
@@ -110,7 +110,6 @@
 							<li class="card-text mt-3">När man klickar på en kolumn eller en plats faller en marker ner.</li>
 							<li class="card-text mt-3">Försök sätta en vinnande rad, samtidigt som du hindrar motspelaren från att vinna.</li>
 						</ul>
-						<!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
 					</div>
 				</div>
 			</div>
