--- a/www/index.html
+++ b/www/index.html
@@ -69,14 +69,14 @@
         <!-- 3 online games  start -->
         <div class="row mt-5">
           <div class="col-12 col-md-4 mb-5">
-            <div class="card">
+            <div class="card online-game">
               <a href="http://www.spelo.se/action/plants-vs-zombies">
                 <div class="btn bg-danger text-white font-weight-bold online">
                   SPELA
                 </div>
                 <img class="card-img-top" src="/img/plants-3.jpg" alt="The game plants vs zombies">
               </a>
-              <div class="card-body">
+              <div class="card-body online-game">
                 <h4 class="card-title text-info">Plants vs Zombies</h4>
                 <p class="card-text">Kydda ett hus från attackerande zombier genom att plantera flera olika plantor. </p>
               </div>
@@ -91,7 +91,7 @@
                 </div>
                 <img class="card-img-top" src="/img/pengu-3.jpg" alt="The game bomberpengu">
               </a>
-              <div class="card-body">
+              <div class="card-body online-game">
                 <h4 class="card-title text-info">Bomberpungu</h4>
                 <p class="card-text">Kydda ett hus från attackerande zombier genom att plantera flera olika plantor. </p>
               </div>
@@ -106,7 +106,7 @@
                 </div>
                 <img class="card-img-top" src="/img/heroes.jpg" alt="The game Guns N Glory Heroes">
               </a>
-              <div class="card-body">
+              <div class="card-body online-game">
                 <h4 class="card-title text-info">Guns n Glory Heroes</h4>
                 <p class="card-text">Kydda ett hus från attackerande zombier genom att plantera flera olika plantor. </p>
               </div>
