--- a/www/hiscore.html
+++ b/www/hiscore.html
@@ -54,8 +54,8 @@
         <div class="score">
           <div class="row mt-4">
             <div class="col-8 mx-auto">
-              <ul class="list-group mt-4 score-list">
-              </ul>
+              <ol class="list-group mt-4 score-list">
+              </ol>
             </div>
           </div>
         </div>
