--- a/www/board.html
+++ b/www/board.html
@@ -83,6 +83,7 @@
     <script src="/js/classes/player.class.js"></script>
     <script src="/js/classes/game.class.js"></script>
     <script src="/js/classes/hiscore.class.js"></script>
+    <script src="/js/classes/boardBase.class.js"></script>
     <script src="/js/main.js"></script>
     <script src="/js/board.js"></script>
   </body>
