--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="container-fluid p-0">
       <nav class="col navbar-expand-lg navbar-dark bg-secondary">
-        <h1>4 i rad</h1>
+        <h1>4 i rad TEST</h1>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
