--- a/www/board.html
+++ b/www/board.html
@@ -16,33 +16,36 @@
   </head>
   <body>
     <header>
-      <div class="container-fluid p-0">
-        <div class="row">
-          <nav class="col ml-3 mr-3 navbar-expand-lg navbar-dark bg-secondary">
-            <h1>4 i rad</h1>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse ml-5" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item active pl-5">
-                  <a class="nav-link" href="index.html">Start<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item pl-5">
-                  <a class="nav-link" href="spel.html">Spela</a>
-                </li>
-                <li class="nav-item pl-5">
-                  <a class="nav-link" href="rules.html">Spelregler</a>
-                </li>
-                <li class="nav-item pl-5">
-                  <a class="nav-link" href="hiscore.html">HiScore</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        </div>
+    <div class="container-fluid p-0">
+      <div class="row">
+        <nav class="col ml-3 navbar navbar-expand-lg navbar-dark bg-secondary">
+          <h1>4 i rad</h1>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse ml-5" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active pl-5">
+                <a class="nav-link" href="/">Start
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item pl-5">
+                <a class="nav-link" href="spel.html">Spela</a>
+              </li>
+              <li class="nav-item pl-5">
+                <a class="nav-link" href="rules.html">Spelregler</a>
+              </li>
+              <li class="nav-item pl-5">
+                <a class="nav-link" href="hiscore.html">HiScore</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
       </div>
-    </header>
+    </div>
+  </header>
     <main>
       <!-- <div class="board"><div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
  -->
@@ -53,23 +56,31 @@
     </div>
 
     </main>
-    <footer>
-      <div>
-        <p>Adress:</p>
-        <p>Kungsgatan 88</p>
-        <p>Malmö, Sweden</p>
+<footer>
+    <div class="container-fluid bg-secondary">
+      <div class="row col-12">
+
+        <div class="col-12 col-md-4 mt-2">
+          <p>Adress:</p>
+          <p>Kungsgatan 88</p>
+          <p>Malmö, Sweden</p>
+        </div>
+
+        <div class="col-12 col-md-4 mt-2">
+          <p>http://www.fourinalinegame.se</p>
+          <p>email: info@fourinalinegame.se</p>
+          <p>email: anja@fourinalinegame.se</p>
+        </div>
+
+        <div class="col-12 col-md-4 mt-2">
+          <p>Kontakt: Anna Karlsson</p>
+          <p>Telefon: +46(0)123456789</p>
+          <p>Mobil: +46(0)123456789</p>
+        </div>
+
       </div>
-      <div>
-        <p>http://www.fourinalinegame.se</p>
-        <p>email: info@fourinalinegame.se</p>
-        <p>email: anja@fourinalinegame.se</p>
-      </div>
-      <div>
-        <p>Kontakt:  Anna Karlsson</p>
-        <p>Telefon:  +46(0)123456789</p>
-        <p>Mobil:    +46(0)123456789</p>
-      </div>
-    </footer>
+    </div>
+  </footer>
 
  
     <!-- JavaScript libraries -->
