Updates på olika klasser så vi kan skapa players array

--- a/www/index.html
+++ b/www/index.html
@@ -116,9 +116,9 @@
           </div>
         </div>
 
-        <!-- 
+        <!--
           <div class="buttonsnav col-12 mt-2 bg-secondary">
-            
+
             <button type="button" href="#" class="btn btn-secondary btn-lg">Spel 1</button>
             <button type="button" href="#" class="btn btn-secondary btn-lg">Spel 2</button>
             <button type="button" href="#" class="btn btn-secondary btn-lg">Spel 3</button>
@@ -166,6 +166,7 @@
   <script src="/js/classes/player.class.js"></script>
   <script src="/js/classes/game.class.js"></script>
   <script src="/js/classes/hiscore.class.js"></script>
+  <script src="/js/classes/app.class.js"></script>
   <script src="/js/main.js"></script>
 </body>
 
