--- a/www/board.html
+++ b/www/board.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/css/libs/bootstrap-4-beta.css">
     <!-- Application specific CSS -->
-    <link rel="stylesheet" href="box-sizing.css">
+    <!-- <link rel="stylesheet" href="box-sizing.css"> -->
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/board.css"
@@ -82,7 +82,7 @@
     </div>
   </footer>
 
- 
+
     <!-- JavaScript libraries -->
     <script src="/jsonflex.js"></script>
     <script src="/js/libs/jquery-3.2.1.js"></script>
@@ -95,6 +95,7 @@
     <script src="/js/classes/game.class.js"></script>
     <script src="/js/classes/hiscore.class.js"></script>
     <script src="/js/classes/boardBase.class.js"></script>
+    <script src="/js/classes/app.class.js"></script>
     <script src="/js/main.js"></script>
     <script src="/js/board.js"></script>
   </body>
