--- a/www/hiscore.html
+++ b/www/hiscore.html
@@ -100,6 +100,7 @@
   <script src="/js/classes/player.class.js"></script>
   <script src="/js/classes/game.class.js"></script>
   <script src="/js/classes/hiscore.class.js"></script>
+  <script src="/js/classes/app.class.js"></script>
   <script src="/js/main.js"></script>
 </body>
 
