--- a/www/rules.html
+++ b/www/rules.html
@@ -11,7 +11,7 @@
 	<!-- Application specific CSS -->
 	<link rel="stylesheet" href="/css/style.css">
 	<link rel="stylesheet" href="/css/main.css">
-	
+
 </head>
 
 <body>
@@ -88,7 +88,7 @@
 		<div class="row">
 			<div class="col-12 col-md-4 mb-5">
 				<div class="card">
-					<img class="card-img-top" src="/img/rules/rules-3.jpg" alt="Card image cap">
+					<img class="card-img-top img-fluid" src="/img/rules/rules-3.jpg" alt="Card image cap">
 					<div class="card-body">
 						<h4 class="card-title font-weight-bold text-center mb-4">Välj motståndare</h4>
 						<ul>
@@ -97,13 +97,13 @@
 							<li class="card-text mt-3">Spelarna turas om att placera 1 marker per drag.</li>
 						</ul>
 					</div>
-				
+
 				</div>
 			</div>
 
 			<div class="col-12 col-md-4 mb-5">
 				<div class="card">
-					<img class="card-img-top" src="/img/rules/rules-2.png" alt="Card image cap">
+					<img class="card-img-top img-fluid" src="/img/rules/rules-2.png" alt="Card image cap">
 					<div class="card-body">
 						<h4 class="card-title font-weight-bold text-center mb-4">Klicka en kolumn eller plats</h4>
 						<ul>
@@ -116,7 +116,7 @@
 
 			<div class="col-12 col-md-4 mb-5">
 				<div class="card">
-					<img class="card-img-top" src="/img/rules/rules-7.png" alt="Card image cap">
+					<img class="card-img-top img-fluid" src="/img/rules/rules-7.png" alt="Card image cap">
 					<div class="card-body">
 						<h4 class="card-title font-weight-bold text-center mb-4">Kolla alla riktningar</h4>
 						<ul>
@@ -172,6 +172,7 @@
 	<script src="/js/classes/player.class.js"></script>
 	<script src="/js/classes/game.class.js"></script>
 	<script src="/js/classes/hiscore.class.js"></script>
+	<script src="/js/classes/app.class.js"></script>
 	<script src="/js/main.js"></script>
 </body>
 
