--- a/www/winpop.html
+++ b/www/winpop.html
@@ -49,7 +49,7 @@
   </header>
 
   <main class="start-page">
-    <h1>VIN POP</h1>
+    <h1>VINN POP</h1>
 
 
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
@@ -69,7 +69,7 @@
           <div class="modal-body">
 
           <h2>Grattis AAA! </h2>
-          <h2>du vin</h2>
+          <h2>Du vinn</h2>
             ...
           </div>
           <div class="modal-footer">
