fixed front page klass till alla html sidor

--- a/www/board.html
+++ b/www/board.html
@@ -91,6 +91,7 @@
     <!-- Application specific JavaScript -->
     <!-- Application specific JavaScript -->
     <script src="/js/classes/base.class.js"></script>
+    <script src="/js/classes/frontpage.class.js"></script>
     <script src="/js/classes/player.class.js"></script>
     <script src="/js/classes/game.class.js"></script>
     <script src="/js/classes/hiscore.class.js"></script>
