--- a/www/rules.html
+++ b/www/rules.html
@@ -169,6 +169,7 @@
 	<script src="/js/libs/bootstrap-4-beta.js"></script>
 	<!-- Application specific JavaScript -->
 	<script src="/js/classes/base.class.js"></script>
+	<script src="/js/classes/frontpage.class.js"></script>
 	<script src="/js/classes/player.class.js"></script>
 	<script src="/js/classes/game.class.js"></script>
 	<script src="/js/classes/hiscore.class.js"></script>
