--- a/www/index.html
+++ b/www/index.html
@@ -94,6 +94,7 @@
   <script src="/js/classes/frontpage.class.js"></script>
   <script src="/js/classes/player.class.js"></script>
   <script src="/js/classes/game.class.js"></script>
+  <script src="/js/classes/board.class.js"></script>
   <script src="/js/classes/hiscore.class.js"></script>
   <script src="/js/classes/app.class.js"></script>
   <script src="/js/main.js"></script>
