--- a/www/rules.html
+++ b/www/rules.html
@@ -171,6 +171,7 @@
 	<script src="/js/classes/base.class.js"></script>
 	<script src="/js/classes/frontpage.class.js"></script>
 	<script src="/js/classes/player.class.js"></script>
+	<script src="/js/classes/board.class.js"></script>
 	<script src="/js/classes/game.class.js"></script>
 	<script src="/js/classes/hiscore.class.js"></script>
 	<script src="/js/classes/app.class.js"></script>
