Renderar in rules.html innehåll från rulespage js class

--- a/www/hiscore.html
+++ b/www/hiscore.html
@@ -98,6 +98,7 @@
   <!-- Application specific JavaScript -->
   <script src="/js/classes/base.class.js"></script>
   <script src="/js/classes/frontpage.class.js"></script>
+  <script src="/js/classes/rulespage.class.js"></script>
   <script src="/js/classes/player.class.js"></script>
   <script src="/js/classes/board.class.js"></script>
   <script src="/js/classes/game.class.js"></script>
