--- a/www/index.html
+++ b/www/index.html
@@ -52,6 +52,7 @@
     <article>
       <section class="container">
         <div class="frontpagecontent">
+          
         </div>
       </section>
     </article>
@@ -92,6 +93,7 @@
   <!-- Application specific JavaScript -->
   <script src="/js/classes/base.class.js"></script>
   <script src="/js/classes/frontpage.class.js"></script>
+  <script src="/js/classes/rulespage.class.js"></script>
   <script src="/js/classes/player.class.js"></script>
   <script src="/js/classes/game.class.js"></script>
   <script src="/js/classes/board.class.js"></script>
