--- a/www/board.html
+++ b/www/board.html
@@ -92,6 +92,7 @@
     <!-- Application specific JavaScript -->
     <script src="/js/classes/base.class.js"></script>
     <script src="/js/classes/frontpage.class.js"></script>
+    <script src="/js/classes/rulespage.class.js"></script>
     <script src="/js/classes/player.class.js"></script>
     <script src="/js/classes/game.class.js"></script>
     <script src="/js/classes/hiscore.class.js"></script>
