--- a/www/winpop.html
+++ b/www/winpop.html
@@ -118,6 +118,8 @@
   <!-- Application specific JavaScript -->
   <!-- Application specific JavaScript -->
   <script src="/js/classes/base.class.js"></script>
+  <script src="/js/classes/rulespage.class.js"></script>
+  <script src="/js/classes/frontpage.class.js"></script>
   <script src="/js/classes/player.class.js"></script>
   <script src="/js/classes/game.class.js"></script>
   <script src="/js/classes/hiscore.class.js"></script>
